--- a/AIEAIDemonstration/AIEAIDemonstration.vcxproj.filters
+++ b/AIEAIDemonstration/AIEAIDemonstration.vcxproj.filters
@@ -180,11 +180,8 @@
     <ClCompile Include="source\NavMesh.cpp">
       <Filter>Source Files\Systems\Pathfinding</Filter>
     </ClCompile>
-    <ClCompile Include="source\Navigator.cpp">
-      <Filter>Source Files\Systems\Components\AI</Filter>
-    </ClCompile>
-    <ClCompile Include="source\NavigationBotSpawner.cpp">
-      <Filter>Source Files\Systems\Spawner</Filter>
+    <ClCompile Include="source\NavMeshStructures.cpp">
+      <Filter>Source Files\Systems\Pathfinding</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -289,12 +286,6 @@
     </ClInclude>
     <ClInclude Include="source\NavMeshStructures.h">
       <Filter>Header Files\Systems\Pathfinding</Filter>
-    </ClInclude>
-    <ClInclude Include="source\Navigator.h">
-      <Filter>Header Files\Systems\Components\AI</Filter>
-    </ClInclude>
-    <ClInclude Include="source\NavigationBotSpawner.h">
-      <Filter>Header Files\Systems\Spawner</Filter>
     </ClInclude>
     <ClInclude Include="source\NavMesh.h">
       <Filter>Header Files\Systems\Pathfinding</Filter>
