added a SteeringBehaviourManager component added a large amount of steering behaviours added shoulder width compensation for the NavMesh pathfinder added a navigational bot with an agent component and a spawner added a navigational bot texture and a boid texture

--- a/AIEAIDemonstration/AIEAIDemonstration.vcxproj
+++ b/AIEAIDemonstration/AIEAIDemonstration.vcxproj
@@ -145,47 +145,62 @@
   <ItemGroup>
     <ClCompile Include="source\Agent.cpp" />
     <ClCompile Include="source\Application2D.cpp" />
+    <ClCompile Include="source\ArrivalBehaviour.cpp" />
     <ClCompile Include="source\Blackboard.cpp" />
     <ClCompile Include="source\BlackboardItem.cpp" />
+    <ClCompile Include="source\BoidSpawner.cpp" />
     <ClCompile Include="source\Box.cpp" />
     <ClCompile Include="source\Circle.cpp" />
     <ClCompile Include="source\CollisionEngine.cpp" />
     <ClCompile Include="source\Director.cpp" />
     <ClCompile Include="source\Entity.cpp" />
+    <ClCompile Include="source\EvadeBehaviour.cpp" />
     <ClCompile Include="source\ExchangeState.cpp" />
     <ClCompile Include="source\ExchangedTransition.cpp" />
     <ClCompile Include="source\FiniteStateMachine.cpp" />
+    <ClCompile Include="source\FleeBehaviour.cpp" />
     <ClCompile Include="source\GameObject.cpp" />
     <ClCompile Include="source\GotoState.cpp" />
     <ClCompile Include="source\Heuristics.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\NavMesh.cpp" />
     <ClCompile Include="source\NavMeshStructures.cpp" />
+    <ClCompile Include="source\ObstacleSpawner.cpp" />
+    <ClCompile Include="source\PathfindingAgent.cpp" />
+    <ClCompile Include="source\PathfindingBotSpawner.cpp" />
     <ClCompile Include="source\Polygon.cpp" />
+    <ClCompile Include="source\PursueBehaviour.cpp" />
     <ClCompile Include="source\RangeTransition.cpp" />
     <ClCompile Include="source\Renderer.cpp" />
     <ClCompile Include="source\SearchState.cpp" />
+    <ClCompile Include="source\SeekBehaviour.cpp" />
+    <ClCompile Include="source\SteeringBehaviourManager.cpp" />
     <ClCompile Include="source\TestSpawner.cpp" />
     <ClCompile Include="source\TradingAgent.cpp" />
     <ClCompile Include="source\TradingBotSpawner.cpp" />
     <ClCompile Include="source\TradingRenderer.cpp" />
     <ClCompile Include="source\TradingTransition.cpp" />
     <ClCompile Include="source\Transform.cpp" />
+    <ClCompile Include="source\WanderBehaviour.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\Agent.h" />
     <ClInclude Include="source\Application2D.h" />
+    <ClInclude Include="source\ArrivalBehaviour.h" />
     <ClInclude Include="source\Blackboard.h" />
     <ClInclude Include="source\BlackboardData.h" />
     <ClInclude Include="source\BlackboardReference.h" />
+    <ClInclude Include="source\BoidSpawner.h" />
     <ClInclude Include="source\Box.h" />
     <ClInclude Include="source\Circle.h" />
     <ClInclude Include="source\CollisionEngine.h" />
     <ClInclude Include="source\Component.h" />
     <ClInclude Include="source\Director.h" />
+    <ClInclude Include="source\EvadeBehaviour.h" />
     <ClInclude Include="source\ExchangeState.h" />
     <ClInclude Include="source\Entity.h" />
     <ClInclude Include="source\FiniteStateMachine.h" />
+    <ClInclude Include="source\FleeBehaviour.h" />
     <ClInclude Include="source\GameObject.h" />
     <ClInclude Include="source\GotoState.h" />
     <ClInclude Include="source\Graph.h" />
@@ -195,19 +210,27 @@
     <ClInclude Include="source\ExchangedTransition.h" />
     <ClInclude Include="source\NavMesh.h" />
     <ClInclude Include="source\NavMeshStructures.h" />
+    <ClInclude Include="source\ObstacleSpawner.h" />
+    <ClInclude Include="source\PathfindingAgent.h" />
+    <ClInclude Include="source\PathfindingBotSpawner.h" />
     <ClInclude Include="source\Polygon.h" />
+    <ClInclude Include="source\PursueBehaviour.h" />
     <ClInclude Include="source\RangeTransition.h" />
     <ClInclude Include="source\Renderer.h" />
     <ClInclude Include="source\Script.h" />
     <ClInclude Include="source\SearchState.h" />
+    <ClInclude Include="source\SeekBehaviour.h" />
     <ClInclude Include="source\Shape.h" />
     <ClInclude Include="source\Spawner.h" />
+    <ClInclude Include="source\SteeringBehaviour.h" />
+    <ClInclude Include="source\SteeringBehaviourManager.h" />
     <ClInclude Include="source\TestSpawner.h" />
     <ClInclude Include="source\TradingAgent.h" />
     <ClInclude Include="source\TradingBotSpawner.h" />
     <ClInclude Include="source\TradingRenderer.h" />
     <ClInclude Include="source\TradingTransition.h" />
     <ClInclude Include="source\Transform.h" />
+    <ClInclude Include="source\WanderBehaviour.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
