added the puzzle bot with a spawner and an agent added a puzzle renderer which renders an image in tiles extended the Planner Action with an isReverse() method added a deltaTime clamp to application2D

--- a/AIEAIDemonstration/AIEAIDemonstration.vcxproj
+++ b/AIEAIDemonstration/AIEAIDemonstration.vcxproj
@@ -176,6 +176,9 @@
     <ClCompile Include="source\PrimitiveRenderer.cpp" />
     <ClCompile Include="source\PursueBehaviour.cpp" />
     <ClCompile Include="source\Puzzle.cpp" />
+    <ClCompile Include="source\PuzzleAgent.cpp" />
+    <ClCompile Include="source\PuzzleBotSpawner.cpp" />
+    <ClCompile Include="source\PuzzleRenderer.cpp" />
     <ClCompile Include="source\RangeTransition.cpp" />
     <ClCompile Include="source\Renderer.cpp" />
     <ClCompile Include="source\SearchState.cpp" />
@@ -228,6 +231,9 @@
     <ClInclude Include="source\PrimitiveRenderer.h" />
     <ClInclude Include="source\PursueBehaviour.h" />
     <ClInclude Include="source\Puzzle.h" />
+    <ClInclude Include="source\PuzzleAgent.h" />
+    <ClInclude Include="source\PuzzleBotSpawner.h" />
+    <ClInclude Include="source\PuzzleRenderer.h" />
     <ClInclude Include="source\RangeTransition.h" />
     <ClInclude Include="source\Renderer.h" />
     <ClInclude Include="source\Script.h" />
